[package]
name = "fscp"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
fastcdc = "3.0.3"


axum = "0.6.18"

tokio = { version = "1.28.2", features = ["rt-multi-thread", "macros", "time"]}
tonic = "0.9.2"
futures = "0.3.28"
walkdir = "2.3.3"

protokit = { version = "0.1.3", features = ["textformat", "grpc"] }
pin-project-lite = "0.2.9"
async-fn-stream = "0.2.0"

[build-dependencies]
protokit_build = "0.1.3"